<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodphoto"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="cursive"
        android:text="@string/tasty_bites"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/fullName_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:background="#33FFFFFF"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/phoneNum_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/phoneNum_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:ems="10"
        android:fontFamily="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullName_et"
        app:layout_constraintBottom_toTopOf="@id/email_et"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:background="#33FFFFFF"
        android:textSize="18sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/phone_number" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:background="#33FFFFFF"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNum_et" />

        <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:background="#33FFFFFF"
        android:entries="@array/sex_array"
        android:popupBackground="@color/button_color"
        app:layout_constraintBottom_toTopOf="@id/password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_et" />


    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:background="#33FFFFFF"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/confirmPassword_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/confirmPassword_et"
        android:layout_marginStart="@dimen/margin_start_and_end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:background="#33FFFFFF"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_et"
        app:layout_constraintBottom_toTopOf="@id/registerButton"/>


    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_start_and_end"
        android:layout_marginEnd="@dimen/margin_start_and_end"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword_et" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>